# Pogo-lab

./: .dockerignore  .env-oci.template  .env.example  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cliff.toml  compose.micro.yaml  compose.prod.yaml  compose.yaml  pyproject.toml  spec.md  tailwind.config.js  todo.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml  oci-a1-capacity-monitor.yml
apps/accounts/: adapter.py  admin.py  allauth_views.py  middleware.py  models.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_invitation.py
apps/accounts/templates/account/: login.html  signup.html
apps/analysis/: apps.py  models.py  services.py  urls.py  views.py
apps/analysis/migrations/: 0001_initial.py  0002_analysisrun_input_fingerprint.py  0003_add_run_status.py
apps/analysis/templates/analysis/: dashboard.html
apps/audit/: admin.py  apps.py  models.py  services.py
apps/audit/migrations/: 0001_initial.py
apps/audit/tests/: test_audit.py
apps/calculators/: apps.py  services.py  urls.py  views.py
apps/calculators/templates/calculators/: _breakpoints_result.html  _catch_result.html  _cost_result.html  _cp_result.html  _pvp_result.html  _result.html  _shadow_result.html  _shiny_result.html  _type_result.html  breakpoints_page.html  catch_page.html  cost_page.html  cp_page.html  page.html  pvp_page.html  shadow_page.html  shiny_page.html  type_page.html
apps/content/: admin.py  apps.py  models.py  urls.py  views.py
apps/content/management/commands/: seed_content.py
apps/content/migrations/: 0001_initial.py
apps/contributions/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/contributions/migrations/: 0001_initial.py  0002_datasetversion_anonymized_rows.py  0003_add_publication_status.py
apps/contributions/tests/: test_contributions.py
apps/core/: legal_views.py  logging_filters.py  metrics.py  middleware.py  ratelimit.py  urls.py  views.py
apps/core/templatetags/: __init__.py  seo_tags.py
apps/core/tests/: test_ratelimit.py
apps/decisions/: apps.py  models.py
apps/decisions/migrations/: 0001_initial.py
apps/dps/: apps.py  services.py  urls.py  views.py
apps/experiments/: admin.py  apps.py  models.py  urls.py  views.py
apps/experiments/migrations/: 0001_initial.py
apps/experiments/tests/: test_experiments.py
apps/mechanics/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/mechanics/migrations/: 0001_initial.py  0002_mechanic_current_ruleset.py
apps/sources/: admin.py  apps.py  models.py
apps/sources/migrations/: 0001_initial.py
apps/trades/: admin.py  models.py  services.py  urls.py  views.py
apps/trades/migrations/: 0001_initial.py  0002_add_dedup_unique_constraint.py
config/: sitemaps.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py  test_postgres.py
docs/: README.md  csv_template.csv  deploy-tooltician.md  domain-model.md  erd-m2.dot  hosting-micro.md  investigacion.md  plan.md  revision-legal-y-marca-2026-07.md
docs/adr/: 0000-template.md  0001-stack-django-htmx-engine-puro.md  0002-versionado-inmutable-rulesets.md  0003-motor-dominio-puro.md  0004-metodos-estadisticos.md  0005-separacion-datos-privados-publicos.md  0006-recomendaciones-deterministas.md  0007-i18n-contenido-indexable.md  0008-user-custom-email.md  0009-hosting-oracle-cloud.md  0010-dps-calculator-module.md  README.md
docs/milestones/: M0-descubrimiento.md  M1-fundacion.md  M2-rules-evidence.md  M3-calculadora.md  M4-trade-tracker.md  M5-analysis-decisions.md  M6-community-dataset.md  M7-hardening-beta.md  M8-ola-a.md  README.md  fase-2.md
docs/research/: README.md  calculator_backlog.csv  data_policy.md  dataset_registry.csv  discrepancy_log.csv  experiment_backlog.csv  formula_registry.csv  research_report.md  source_registry.csv  test_vectors.json  tool_audit.csv
docs/research/domain_research_packets/: capture_mechanics.md  eggs_and_shiny.md  max_battles.md  pve_combat.md  pvp_combat.md  resources_economy.md
engine/: __init__.py  breakpoints.py  catch.py  costs.py  decisions.py  dps.py  dps_data.py  intervals.py  observations.py  probability.py  pvp_rank.py  rulesets.py  shadow.py  stat_tests.py  stats.py  types.py  versioning.py
engine/tests/: __init__.py  test_catch.py  test_costs.py  test_decisions.py  test_dps.py  test_intervals.py  test_observations.py  test_probability.py  test_pvp_rank.py  test_rulesets.py  test_shadow.py  test_stat_tests.py  test_stats.py  test_types.py  test_versioning.py
infra/nginx/: default.conf
infra/systemd/: pogo-lab-backup.service  pogo-lab-backup.timer
locale/en/LC_MESSAGES/: django.mo  django.po
locale/es/LC_MESSAGES/: django.po
plans/: 001-fix-i18n-baseline-and-language-switcher.md  002-add-dockerignore.md  003-consent-views-post-only-safe-redirect.md  004-calculator-input-validation.md  005-observation-enum-validation.md  006-analysis-dashboard-idempotent.md  007-trade-write-view-input-validation.md  008-csv-import-nplus1.md  009-unify-analysis-aggregators.md  010-ruleparameter-immutability.md  README.md
static/css/: input.css  output.css
templates/: base.html  robots.txt
templates/account/: login.html  signup.html  signup_closed.html
templates/accounts/: delete.html  delete_done.html  export.html  invitation_email.txt
templates/admin/: base_site.html
templates/core/: 429.html  healthz.html
templates/experiments/: dashboard.html
templates/includes/: _badge.html  _empty_state.html  _logo_icon.html  _skeleton.html  _stat_card.html
templates/legal/: disclaimer.html  privacy.html  tos.html
tests/: test_account.py  test_analysis.py  test_audit_immutable.py  test_calculators.py  test_decisions.py  test_dps_views.py  test_e2e.py  test_edge_cases.py  test_invitations.py  test_m1_smoke.py  test_mechanics_integration.py  test_oci_a1_capacity_monitor.py  test_plans_regression.py  test_ratelimit.py  test_sad_paths.py  test_security.py  test_settings.py  test_trades.py
(+21 files in other folders)
