[project]
name = "pogo-lab"
version = "0.1.0"
description = "Mechanics Lab + Decision Planner para Pokémon GO"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Pogo-lab Team" }]
license = { text = "Por definir" }
dependencies = [
    "django~=5.2.0",
    "django-environ>=0.12.0",
    "django-allauth>=65.0.0",
    "psycopg[binary]>=3.2.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
    "fido2>=1.2.0",
    "import-linter>=2.0.0",
    "scipy>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.10.0",
    "pytest-randomly>=3.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "django-stubs>=5.2.0",
    "django-stubs-ext>=5.2.0",
    "pre-commit>=4.0.0",
    "coverage>=7.6.0",
    "django-extensions>=4.0.0",
    "ipython>=8.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "ARG",
    "C4", "T20", "RUF",
]
ignore = ["E501"]
exclude = ["*/migrations/*", "apps/accounts/signals.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = false
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["migrations/", ".venv/"]
# django-stubs plugin activado cuando haya modelos reales (M2+)
# plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "config.settings.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "engine.*"
disable_error_code = ["empty-body", "return"]

[[tool.mypy.overrides]]
module = "apps.*.admin"
disable_error_code = ["var-annotated", "misc"]

[[tool.mypy.overrides]]
module = "apps.*"
disable_error_code = ["var-annotated"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = ["engine/tests", "apps", "tests"]
norecursedirs = [".venv", ".codegraph", "node_modules"]
addopts = "--randomly-seed=0"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["engine", "config", "apps"]
omit = ["*/migrations/*", "*/tests/*", "config/settings/*"]

[tool.coverage.report]
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.hatch.build.targets.wheel]
packages = ["config/", "apps/", "engine/", "manage.py", "static/"]

[tool.importlinter]
root_packages = ["engine"]
include_external_packages = true
exclude_type_checking_imports = false

[[tool.importlinter.contracts]]
name = "engine-purity"
type = "forbidden"
source_modules = ["engine"]
forbidden_modules = ["django"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.15.2",
    "django-extensions>=4.1",
    "django-stubs[compatible-mypy]>=6.0.7",
    "hypothesis>=6.156.6",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-randomly>=4.1.0",
    "ruff>=0.15.22",
    "types-python-dateutil>=2.9.0.20260716",
    "types-pytz>=2026.2.0.20260518",
]
