[project]
name = "pogo-lab"
version = "0.1.0"
description = "Mechanics Lab + Decision Planner para Pokémon GO"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Pogo-lab Team" }]
license = { text = "Proprietary" }
dependencies = [
    "django~=5.2.0",
    "django-environ>=0.12.0",
    "django-allauth>=65.0.0",
    "psycopg[binary]>=3.2.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
    "fido2>=1.2.0",
    "import-linter>=2.0.0",
    "django-csp>=4.0.0",
    "django-ratelimit>=4.1.0",
    "argon2-cffi>=23.1.0",
    "scipy>=1.15.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "ARG",
    "C4", "T20", "RUF",
]
ignore = ["E501"]
exclude = ["*/migrations/*", "apps/accounts/signals.py"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ARG001", "ARG002"]
"apps/*/tests/*.py" = ["ARG001", "ARG002"]
"config/settings/prod.py" = ["F403", "F405"]
"config/settings/dev.py" = ["F403", "F405"]
"config/settings/test.py" = ["F403", "F405"]
"apps/accounts/apps.py" = ["F401"]
"apps/*/admin.py" = ["RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = false
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["migrations/", ".venv/"]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "config.settings.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "engine.*"
disable_error_code = []

[[tool.mypy.overrides]]
module = "apps.*.admin"
disable_error_code = ["var-annotated", "misc"]

[[tool.mypy.overrides]]
module = "apps.*"
disable_error_code = ["var-annotated"]

[[tool.mypy.overrides]]
# django-stubs: fricción conocida del User custom (override de ClassVar de AbstractBaseUser
# y tipo del manager). El `set_password` sobre el TypeVar se resuelve con BaseUserManager["User"].
module = "apps.accounts.models"
disable_error_code = ["misc", "assignment"]

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = ["engine/tests", "apps", "tests"]
norecursedirs = [".venv", ".codegraph", ".hypothesis", "node_modules"]
addopts = "--randomly-seed=0"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["engine", "config", "apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "config/settings/*",
    "config/asgi.py",
    "config/wsgi.py",
]

[tool.coverage.report]
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.hatch.build.targets.wheel]
packages = ["config/", "apps/", "engine/", "manage.py", "static/"]

[tool.importlinter]
root_packages = ["engine"]
include_external_packages = true
exclude_type_checking_imports = false

[[tool.importlinter.contracts]]
name = "engine-purity"
type = "forbidden"
source_modules = ["engine"]
forbidden_modules = ["django"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.15.2",
    "django-extensions>=4.1",
    "django-stubs[compatible-mypy]>=6.0.7",
    "hypothesis>=6.156.6",
    "mypy>=2.3.0",
    "pip-audit>=2.9.0",
    "playwright>=1.55.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-playwright>=0.7.0",
    "pytest-randomly>=4.1.0",
    "ruff>=0.15.22",
    "types-python-dateutil>=2.9.0.20260716",
    "types-pytz>=2026.2.0.20260518",
]
